Fix bug where output text would be misaligned on smaller screens

--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ form {
         position: absolute;
         right: 0;
         left: 0;
-        bottom: 55%;
+        top: 325px;
     }
 }
 
